@@ -1,7 +1,7 @@
 
 The Janelia Research Campus Software Copyright 1.2
 
-Copyright (c) 2020, Howard Hughes Medical Institute, All rights reserved.
+Copyright (c) 2024, Howard Hughes Medical Institute, All rights reserved.
 
 Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
 
