@@ -1,4 +1,10 @@
 ==============
+AS OF 20240129
+==============
+
+- Allow remote fetch of filtered IM stream.
+
+==============
 AS OF 20230425
 ==============
 
